Add meta information to head

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Jia Liang | Software Engineer</title>
+    <meta
+      name="description"
+      content="Personal website of Singapore software engineer, Jia Liang"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://jialiang.github.io/favicon.ico"
+    />
+    <link rel="canonical" href="https://jialiang.github.io" />
+    <meta name="theme-color" content="#000" />
+    <meta
+      name="image"
+      content="https://jialiang.github.io/images/project-1-780.jpg"
+    />
+    <meta name="author" content="Jia Liang, hojialiang@yahoo.com" />
     <style>
       @font-face {
         font-family: "Atkinson";
