optimize images to use webp

--- a/src/components/website/index.ejs
+++ b/src/components/website/index.ejs
@@ -30,17 +30,17 @@ JavaScript libraries powered by [NodeJS](https://nodejs.org/en/) are used to com
 
 ## Performance
 
-The entire website inclusive of all resources for a 1080p screen has a transfer size of only 442kB, of which:
+The entire website inclusive of all resources for a 1080p screen has a transfer size of only 256kB, of which:
 
 Type   | Approx. Size
 :---   | ---:
-JPG    | 292kB (66%)
-SVG    | 84kB (19%)
-WOFF2  | 32kB (7%)
-PNG    | 22kB (5%)
-CSS    | 7kB (2%)
-HTML   | 4kB (1%)
-JS     | 148 Bytes
+WEBP   | 105kB (41%)
+SVG    | 84kB (33%)
+WOFF2  | 32kB (13%)
+PNG    | 22kB (9%)
+CSS    | 7kB (3%)
+HTML   | 6kB (2%)
+JS     | 200 Bytes
 
 For comparison, the [Google homepage](https://www.google.com/) trasfers a total of 390kB on the same device.
 
