--- a/src/components/work/index.ejs
+++ b/src/components/work/index.ejs
@@ -9,11 +9,11 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 507 285"></svg>
         <img
           srcset="
-            images/project-1-360.jpg 360w,
-            images/project-1-520.jpg 520w,
-            images/project-1-780.jpg 780w
+            images/project-1-360.webp 360w,
+            images/project-1-520.webp 520w,
+            images/project-1-780.webp 780w
           "
-          src="images/project-1-520.jpg"
+          src="images/project-1-780.jpg"
           alt="Screenshot of this website"
           onerror="this.style.opacity='0'"
         />
@@ -28,11 +28,11 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 507 285"></svg>
         <img
           srcset="
-            images/project-2-360.jpg 360w,
-            images/project-2-520.jpg 520w,
-            images/project-2-780.jpg 780w
+            images/project-2-360.webp 360w,
+            images/project-2-520.webp 520w,
+            images/project-2-780.webp 780w
           "
-          src="images/project-2-520.jpg"
+          src="images/project-2-780.jpg"
           alt="Pieretta in WebGL project cover image"
           onerror="this.style.opacity='0'"
         />
@@ -47,11 +47,11 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 507 285"></svg>
         <img
           srcset="
-            images/project-3-360.jpg 360w,
-            images/project-3-520.jpg 520w,
-            images/project-3-780.jpg 780w
+            images/project-3-360.webp 360w,
+            images/project-3-520.webp 520w,
+            images/project-3-780.webp 780w
           "
-          src="images/project-3-520.jpg"
+          src="images/project-3-780.jpg"
           alt="Tile Matching Game project cover image"
           onerror="this.style.opacity='0'"
         />
