--- a/src/index.ejs
+++ b/src/index.ejs
@@ -15,7 +15,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="https://jialiang.github.io/favicon.ico"
+      href="https://jialiang.github.io/favicon.png"
     />
     <link rel="canonical" href="https://jialiang.github.io" />
     <meta name="theme-color" content="#000" />
