Add google speed results and link to Lighthouse report

--- a/src/components/website/index.ejs
+++ b/src/components/website/index.ejs
@@ -42,13 +42,13 @@ CSS    | 7kB (3%)
 HTML   | 6kB (2%)
 JS     | 200 Bytes
 
-For comparison, the [Google homepage](https://www.google.com/) trasfers a total of 390kB on the same device.
+For comparison, the [Google homepage](https://jialiang.github.io/images/google-speed.jpg) trasfers a total of 458kB on the same device.
 
 
 During rendering performance testing, the website is able to both play animations & scroll smoothly on an 2016 Asus Zenfone 3 & 2015 Macbook Pro.
 The test is done in Firefox & Chrome for the former and Safari for the latter.
 
-This website has a Lighthose score of 98/100 in the Performance category.
+This website has a [Lighthose score of 100/100](https://lighthouse-dot-webdotdevsite.appspot.com//lh/html?url=https%3A%2F%2Fjialiang.github.io%2F) in the Performance category.
 
 ## Compatibility
 
@@ -80,7 +80,7 @@ This website has the following accessibility features:
 - [Atkinson Hyperlegible](https://www.brailleinstitute.org/freefont) font for low-vision readers.
 - Valid HTML & CSS verified by the [W3C Markup Validation Service](https://validator.w3.org/).
 
-This website has a Lighthouse score of 100/100 in the Accessibility category.
+This website has a [Lighthouse score of 100/100](https://lighthouse-dot-webdotdevsite.appspot.com//lh/html?url=https%3A%2F%2Fjialiang.github.io%2F) in the Accessibility category.
 
 ## Privacy
 
