Fix w3c validation errors

--- a/src/components/mainmenu/index.ejs
+++ b/src/components/mainmenu/index.ejs
@@ -2,9 +2,7 @@
   <div class="room" role="presentation"></div>
   <div class="glow" role="presentation"></div>
   <div class="paper" role="presentation"></div>
-  <div class="logo" role="heading" aria-level="1">
-    Jia Liang, software engineer
-  </div>
+  <h1 class="logo">Jia Liang, software engineer</h1>
   <div class="leaf-container" role="presentation">
     <div class="leaf"></div>
     <div class="leaf"></div>
