--- a/src/components/work/index.ejs
+++ b/src/components/work/index.ejs
@@ -13,6 +13,10 @@
             images/project-1-520.webp 520w,
             images/project-1-780.webp 780w
           "
+          sizes="
+            (max-width: 25.5em) calc(100vw - 2em),
+            23.5em
+          "
           src="images/project-1-780.jpg"
           alt="Screenshot of this website"
           onerror="this.style.opacity='0'"
@@ -32,6 +36,10 @@
             images/project-2-520.webp 520w,
             images/project-2-780.webp 780w
           "
+          sizes="
+            (max-width: 25.5em) calc(100vw - 2em),
+            23.5em
+          "
           src="images/project-2-780.jpg"
           alt="Pieretta in WebGL project cover image"
           onerror="this.style.opacity='0'"
@@ -50,6 +58,10 @@
             images/project-3-360.webp 360w,
             images/project-3-520.webp 520w,
             images/project-3-780.webp 780w
+          "
+          sizes="
+            (max-width: 25.5em) calc(100vw - 2em),
+            23.5em
           "
           src="images/project-3-780.jpg"
           alt="Tile Matching Game project cover image"
