--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -279,6 +279,14 @@ a {
       }
     }
   }
+
+  .text-left {
+    text-align: left;
+  }
+
+  .text-right {
+    text-align: right;
+  }
 }
 
 .article {
