--- a/src/index.ejs
+++ b/src/index.ejs
@@ -64,8 +64,7 @@
       <script>
         var d = document;
         [].forEach.call(d.querySelectorAll("section"), function (section) {
-          console.log(location.hash);
-          if ("#" + section.id === location.hash) {
+          if (section.id && "#" + section.id === location.hash) {
             d.body.className = "skip-intro";
             section.focus();
           }
