Fix image aspect ratio not preserved on IE

--- a/src/components/work/index.ejs
+++ b/src/components/work/index.ejs
@@ -6,7 +6,12 @@
     <p>Some of my personal projects:</p>
     <a href="#website">
       <figure>
-        <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 507 285"></svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewbox="0 0 507 285"
+          width="507"
+          height="285"
+        ></svg>
         <img
           srcset="
             images/project-1-360.webp 360w,
@@ -29,7 +34,12 @@
     </a>
     <a href="#construction">
       <figure>
-        <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 507 285"></svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewbox="0 0 507 285"
+          width="507"
+          height="285"
+        ></svg>
         <img
           srcset="
             images/project-2-360.webp 360w,
@@ -52,7 +62,12 @@
     </a>
     <a href="#construction">
       <figure>
-        <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 507 285"></svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewbox="0 0 507 285"
+          width="507"
+          height="285"
+        ></svg>
         <img
           srcset="
             images/project-3-360.webp 360w,
