--- a/src/components/work/index.ejs
+++ b/src/components/work/index.ejs
@@ -12,20 +12,21 @@
           width="507"
           height="285"
         ></svg>
-        <img
-          srcset="
-            images/project-1-360.webp 360w,
-            images/project-1-520.webp 520w,
-            images/project-1-780.webp 780w
-          "
-          sizes="
-            (max-width: 25.5em) calc(100vw - 2em),
-            23.5em
-          "
-          src="images/project-1-780.jpg"
-          alt="Screenshot of this website"
-          onerror="this.style.opacity='0'"
-        />
+        <picture>
+          <source
+            type="image/webp"
+            srcset="
+              images/project-1-360.webp 360w,
+              images/project-1-520.webp 520w,
+              images/project-1-780.webp 780w
+            "
+            sizes="(max-width: 25.5em) calc(100vw - 2em), 23.5em"
+          />
+          <img
+            src="images/project-1-780.jpg"
+            alt="Screenshot of this website"
+          />
+        </picture>
         <figcaption>
           <div class="title">The Making of...This Website</div>
           <div class="action" aria-hidden="true">Read</div>
@@ -40,20 +41,21 @@
           width="507"
           height="285"
         ></svg>
-        <img
-          srcset="
-            images/project-2-360.webp 360w,
-            images/project-2-520.webp 520w,
-            images/project-2-780.webp 780w
-          "
-          sizes="
-            (max-width: 25.5em) calc(100vw - 2em),
-            23.5em
-          "
-          src="images/project-2-780.jpg"
-          alt="Pieretta in WebGL project cover image"
-          onerror="this.style.opacity='0'"
-        />
+        <picture>
+          <source
+            type="image/webp"
+            srcset="
+              images/project-2-360.webp 360w,
+              images/project-2-520.webp 520w,
+              images/project-2-780.webp 780w
+            "
+            sizes="(max-width: 25.5em) calc(100vw - 2em), 23.5em"
+          />
+          <img
+            src="images/project-2-780.jpg"
+            alt="Pieretta in WebGL project cover image"
+          />
+        </picture>
         <figcaption>
           <div class="title">Pieretta in WebGL</div>
           <div class="action" aria-hidden="true">Read</div>
@@ -68,20 +70,21 @@
           width="507"
           height="285"
         ></svg>
-        <img
-          srcset="
-            images/project-3-360.webp 360w,
-            images/project-3-520.webp 520w,
-            images/project-3-780.webp 780w
-          "
-          sizes="
-            (max-width: 25.5em) calc(100vw - 2em),
-            23.5em
-          "
-          src="images/project-3-780.jpg"
-          alt="Tile Matching Game project cover image"
-          onerror="this.style.opacity='0'"
-        />
+        <picture>
+          <source
+            type="image/webp"
+            srcset="
+              images/project-3-360.webp 360w,
+              images/project-3-520.webp 520w,
+              images/project-3-780.webp 780w
+            "
+            sizes="(max-width: 25.5em) calc(100vw - 2em), 23.5em"
+          />
+          <img
+            src="images/project-3-780.jpg"
+            alt="Tile Matching Game project cover image"
+          />
+        </picture>
         <figcaption>
           <div class="title">Tile Matching Game</div>
           <div class="action" aria-hidden="true">Read</div>
