--- a/src/components/website/index.ejs
+++ b/src/components/website/index.ejs
@@ -30,16 +30,16 @@ JavaScript libraries powered by [NodeJS](https://nodejs.org/en/) are used to com
 
 ## Performance
 
-The entire website inclusive of all resources for a 1080p screen has a transfer size of only 256kB, of which:
+The entire website inclusive of all resources for my 1080p screen has a transfer size of only 223kB, of which:
 
 Type   | Approx. Size
 :---   | ---:
-WEBP   | 105kB (41%)
-SVG    | 84kB (33%)
-WOFF2  | 32kB (13%)
-PNG    | 22kB (9%)
-CSS    | 7kB (3%)
-HTML   | 6kB (2%)
+WEBP   | 70kB (31%)
+SVG    | 84kB (38%)
+WOFF2  | 32kB (15%)
+PNG    | 22kB (10%)
+CSS    | 8kB (3%)
+HTML   | 7kB (3%)
 JS     | 200 Bytes
 
 For comparison, the [Google homepage](https://jialiang.github.io/images/google-speed.jpg) trasfers a total of 458kB on the same device.
