--- a/src/components/work/index.ejs
+++ b/src/components/work/index.ejs
@@ -33,6 +33,35 @@
         </figcaption>
       </figure>
     </a>
+    <a href="#matrix">
+      <figure>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewbox="0 0 507 285"
+          width="507"
+          height="285"
+        ></svg>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="
+              images/project-4-360.webp 360w,
+              images/project-4-520.webp 520w,
+              images/project-4-780.webp 780w
+            "
+            sizes="(max-width: 25.5em) calc(100vw - 2em), 23.5em"
+          />
+          <img
+            src="images/project-4-780.jpg"
+            alt="Screenshot of Pure CSS Matrix Digital Rain project"
+          />
+        </picture>
+        <figcaption>
+          <div class="title">Pure CSS Digital Rain</div>
+          <div class="action" aria-hidden="true">Read</div>
+        </figcaption>
+      </figure>
+    </a>
     <a href="#construction">
       <figure>
         <svg
