--- a/src/index.ejs
+++ b/src/index.ejs
@@ -55,6 +55,8 @@
       <!--  -->
       <%- include("components/website/index") %>
       <!--  -->
+      <%- include("components/matrix/index") %>
+      <!--  -->
       <%- include("components/construction/index") %>
       <!--  -->
       <%- include("components/mainmenu/index") %>
