--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -26,19 +26,19 @@ body {
   > section,
   > div,
   > svg {
-    position: absolute;
     z-index: 1;
     top: 0;
-    left: 0;
-    overflow: hidden;
     width: 100%;
-    height: 100%;
+    outline: none;
   }
 
   > section {
+    position: relative;
     z-index: 2;
+    overflow-x: hidden;
     overflow-y: auto;
     box-sizing: border-box;
+    height: 100%;
     border-left: 2px solid rgba(0, 0, 0, 0);
 
     &:focus {
@@ -51,29 +51,47 @@ body {
     }
   }
 
+  > div,
+  > svg,
+  > section.mainmenu {
+    position: fixed;
+    right: 0;
+    left: 0;
+    overflow: hidden;
+    width: calc(100vh * 16 / 9);
+    max-width: 100%;
+    height: 100%;
+    margin: auto;
+  }
+
   .vignette,
   .cover {
     z-index: 2;
+    width: calc(102vh * 16 / 9);
     pointer-events: none;
   }
 
   .vignette {
     background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.25),
-      transparent,
-      transparent,
-      rgba(0, 0, 0, 0.25)
+    to right,
+    rgba(0, 0, 0, 0.25),
+    transparent,
+    transparent,
+    rgba(0, 0, 0, 0.25)
     );
   }
 
   .back {
     font-size: 1.35em;
-    position: absolute;
+    position: fixed;
     z-index: 2;
-    right: 1vh;
+    right: calc(50vw - 50vh / 9 * 16);
     bottom: 1vh;
     transform: rotateZ(-3deg);
+
+    @media (max-aspect-ratio: 16 / 9) {
+      right: 1vh;
+    }
   }
 }
 
