--- a/src/components/transition/about.scss
+++ b/src/components/transition/about.scss
@@ -1,7 +1,7 @@
 @import "sass-inline-svg.scss";
 
 .about-filter {
-  transform: scale(0);
+  transform: scale3d(0, 0, 1);
   pointer-events: none;
   background: radial-gradient(snow, saddlebrown);
 
@@ -23,7 +23,7 @@
     position: absolute;
     top: 0;
     height: 100%;
-    transform: scaleX(0);
+    transform: scale3d(0, 1, 1);
     border-right: 2px solid maroon;
     background: linear-gradient(
     to right,
@@ -52,7 +52,7 @@
     left: 0;
     width: 350px;
     height: 350px;
-    transform: rotateZ(24deg) scale(0);
+    transform: rotateZ(24deg) scale3d(0, 0, 1);
     background: inline-svg("floral", black, black) 0 100%/350px auto no-repeat;
   }
 
@@ -62,7 +62,7 @@
     bottom: auto;
     left: auto;
     transition: none;
-    transform: rotateZ(-90deg) scale(0);
+    transform: rotateZ(-90deg) scale3d(0, 0, 1);
 
     @media (max-height: 600px) {
       display: none;
@@ -73,12 +73,12 @@
 #about:target {
   ~ .about-filter {
     transition: 0.3s transform 0.1s;
-    transform: scale(1);
+    transform: scale3d(1, 1, 1);
   }
 
   ~ .about-decorations {
     .pillar {
-      transform: scaleX(1);
+      transform: scale3d(1, 1, 1);
 
       &:nth-child(1) {
         transition: 0.25s transform 0.6s;
@@ -91,12 +91,12 @@
 
     .flower-1 {
       transition: 0.25s transform 0.3s;
-      transform: rotateZ(24deg) scale(1);
+      transform: rotateZ(24deg) scale3d(1, 1, 1);
     }
 
     .flower-2 {
       transition: 0.25s transform 0.45s;
-      transform: rotateZ(-90deg) scale(1);
+      transform: rotateZ(-90deg) scale3d(1, 1, 1);
     }
   }
 }
