--- a/src/components/transition/work.scss
+++ b/src/components/transition/work.scss
@@ -1,7 +1,7 @@
 @import "sass-inline-svg.scss";
 
 .work-filter {
-  transform: scale(0);
+  transform: scale3d(0, 0, 1);
   pointer-events: none;
   background: radial-gradient(#0980ff, #88e7d5, #6161b5);
 
@@ -30,7 +30,7 @@
     left: 0;
     width: 350px;
     height: 350px;
-    transform: scale(0);
+    transform: scale3d(0, 0, 1);
     transform-origin: bottom left;
     background: inline-svg("fish") 0 0 / auto 100% no-repeat;
   }
@@ -39,7 +39,7 @@
     right: 0;
     bottom: 350px;
     left: auto;
-    transform: rotateZ(90deg) scale(0);
+    transform: rotateZ(90deg) scale3d(0, 0, 1);
 
     @media (max-width: 750px) {
       display: none;
@@ -50,18 +50,18 @@
 #work:target {
   ~ .work-filter {
     transition: 0.3s transform 0.1s;
-    transform: scale(1);
+    transform: scale3d(1, 1, 1);
   }
 
   ~ .work-decorations {
     .fish-1 {
       transition: 0.25s transform 0.3s;
-      transform: scale(1);
+      transform: scale3d(1, 1, 1);
     }
 
     .fish-2 {
       transition: 0.25s transform 0.45s;
-      transform: rotateZ(90deg) scale(1);
+      transform: rotateZ(90deg) scale3d(1, 1, 1);
     }
   }
 }
