Fix media query width doesn't match new text-container width

--- a/src/components/transition/work.scss
+++ b/src/components/transition/work.scss
@@ -7,7 +7,7 @@
 
   mix-blend-mode: hard-light;
 
-  @media (max-width: 550px) {
+  @media (max-width: 25.5em) {
     background: radial-gradient(
     rgba(9, 128, 255, 0.5),
     #00ffcf,
