--- a/src/components/transition/about.scss
+++ b/src/components/transition/about.scss
@@ -7,7 +7,7 @@
 
   mix-blend-mode: hard-light;
 
-  @media (max-width: 550px) {
+  @media (max-width: 25.5em) {
     background: radial-gradient(white 5%, rgba(255, 106, 0, 0.5) 67%);
 
     mix-blend-mode: normal;
