--- a/src/components/transition/thanks.scss
+++ b/src/components/transition/thanks.scss
@@ -25,13 +25,13 @@
   transform: scale3d(0, 0, 1);
   pointer-events: none;
   background: inline-svg("radial") 50% 50%/100% auto,
-    radial-gradient(gold, goldenrod);
+  radial-gradient(gold, goldenrod);
 
   mix-blend-mode: hard-light;
 
-  @media (max-width: 550px) {
+  @media (max-width: 25.5em) {
     background-image: inline-svg("radial-solid"),
-      radial-gradient(gold, rgba(218, 165, 32, 0.5));
+    radial-gradient(gold, rgba(218, 165, 32, 0.5));
 
     mix-blend-mode: normal;
   }
