--- a/src/components/about/index.ejs
+++ b/src/components/about/index.ejs
@@ -26,26 +26,26 @@ Lived in Singapore for 2 years.
 
 ---
 
-**At my current job, I use**
+At my current job, I use:
 
 React, Redux.
 HTML, CSS, JavaScript.
 NodeJS, Typescript, Jest.
 Sequelize, Knex, Postgres.
 
-See resume for full skill list.
+You can see my resume for the full list.
 
----
+But I don't think that's what's important.
 
-**In my free time**
+Algorithms & Frameworks are easily learned.
+Attitude & Mindset, not so much.
 
-I play PC games.
-Watch anime.
-Go sightseeing.
-Make web apps.
-Take naps.
+Want someone who can hit the ground running?
+It's a marathon, not a sprint.
 
----
+**Let's talk.**
+
+The combined power of the 2 of us may surprise even the world.
     `) %>
   </div>
 </section>
