--- a/src/components/matrix/index.ejs
+++ b/src/components/matrix/index.ejs
@@ -37,23 +37,11 @@ Looking at the video clip above, here are some of my observations on what's goin
 - The glow is independent of the characters.
 - The light of the glow bleeds into nearby code.
 
-## Results
+## Conclusion
 
-I think what I have looks kind of good but it too looks nothing like the real thing.
+Looking at my list of observations, it's no wonder that making a convincing replica in code is difficult.
 
-Looking at my observations now, it does seem like a tall order to make a convincing copy in code.
-
-## Takeaway
-
-So what did I learned technical-wise from doing this project?
-
-- Firefox have trouble animating opacity of elements with lots texts with text-shadow.
-
-- Applying \`filter: blur\` on the body is surprisingly viable. I'd expect the animation to slow to a crawl everywhere but it didn't. Even on mobile, it is only Firefox who struggled while Chrome chugs along at an acceptable framerate. I'm now more open-minded about using it in future projects.
-
-- For presentation purposes, the illusion of randomness is sufficient.
-
-- Everyone blurs and shadows things differently.
+After spending a lazy weekend fiddling around, I would say for most practical purposes, it is better to just take the idea of the digital rain and make it beautiful rather than try to mimic it faithfully.
 
 ---
 
