--- a/src/components/website/index.ejs
+++ b/src/components/website/index.ejs
@@ -23,7 +23,7 @@ This time around, the design is inspired by:
 ## Tech Stack
 
 [EJS](https://ejs.co/) & [Markdown](https://daringfireball.net/projects/markdown/) is used for layout & content.
-Sass is used for styling.
+[Sass](https://sass-lang.com/) is used for styling.
 
 JavaScript libraries powered by [NodeJS](https://nodejs.org/en/) are used to compile source code & optimize assets.
 [Gulp](https://gulpjs.com/) is used to manage the aforementioned build process.
@@ -45,7 +45,7 @@ JS     | 200 Bytes
 For comparison, the [Google homepage](https://jialiang.github.io/images/google-speed.jpg) trasfers a total of 458kB on the same device.
 
 
-During rendering performance testing, the website is able to both play animations & scroll smoothly on an 2016 Asus Zenfone 3 & 2015 Macbook Pro.
+During rendering performance testing, the website is able to both play animations & scroll smoothly on a 2016 Asus Zenfone 3 & 2015 Macbook Pro.
 The test is done in Firefox & Chrome for the former and Safari for the latter.
 
 This website has a [Lighthose score of 100/100](https://lighthouse-dot-webdotdevsite.appspot.com//lh/html?url=https%3A%2F%2Fjialiang.github.io%2F) in the Performance category.
@@ -60,14 +60,14 @@ This website is compatible with:
 - Safari
 - Internet Explorer 11
 
-It also functions with JavaScript disabled with hardly any degradation.
+It also functions fine with JavaScript disabled.
+The only line of JavaScript used is just to make sure the opening animation doesn't play if the page loads with a valid hash fragment.
 
 This website supports screens of:
 
 - Size as small as [240 × 320](https://en.wikipedia.org/wiki/Graphics_display_resolution#320_%C3%97_240_(QVGA)).
 - Aspect-ratio as wide as [21:9](https://en.wikipedia.org/wiki/21:9_aspect_ratio#Smartphones).
 - Aspect-ratio as tall as [9:21](https://en.wikipedia.org/wiki/21:9_aspect_ratio#Smartphones).
-- Device pixel ratio as high as 3.
 
 ## Accessibility
 
@@ -78,7 +78,7 @@ This website has the following accessibility features:
 - Has text contrast ratio of 4.5:1 and above.
 - Support text zoom level up to 200%.
 - [Atkinson Hyperlegible](https://www.brailleinstitute.org/freefont) font for low-vision readers.
-- Valid HTML & CSS verified by the [W3C Markup Validation Service](https://validator.w3.org/).
+- Valid HTML & CSS verified by the [W3C Markup Validation Service](https://validator.w3.org/nu/?doc=https%3A%2F%2Fjialiang.github.io%2F).
 
 This website has a [Lighthouse score of 100/100](https://lighthouse-dot-webdotdevsite.appspot.com//lh/html?url=https%3A%2F%2Fjialiang.github.io%2F) in the Accessibility category.
 
