Change about decoration pillars style

--- a/src/components/transition/about.scss
+++ b/src/components/transition/about.scss
@@ -23,12 +23,14 @@
     position: absolute;
     top: 0;
     height: 100%;
-    transform: scale3d(0, 1, 1);
     border-right: 2px solid maroon;
+    border-left: 2px solid #333;
     background: linear-gradient(
     to right,
-    rgba(0, 0, 0, 0.5) 50%,
-    rgba(0, 0, 0, 0) 50%
+    rgba(0, 0, 0, 0) 25%,
+    rgba(0, 0, 0, 0.5) 30%,
+    rgba(0, 0, 0, 0.5) 70%,
+    rgba(0, 0, 0, 0) 75%
     )
     0 33%/25px 25vh repeat-x,
     linear-gradient(to right, maroon, rgba(194, 0, 0, 0.6), red);
@@ -36,12 +38,15 @@
     &:nth-child(1) {
       left: 0;
       width: 25%;
+      transform: rotateZ(-5deg) scale3d(0, 1, 1);
       transform-origin: left;
     }
 
     &:nth-child(2) {
       left: 75%;
       width: 12.5%;
+      transform: rotateZ(5deg) scale3d(0, 1, 1);
+      transform-origin: right;
     }
   }
 
@@ -78,14 +83,14 @@
 
   ~ .about-decorations {
     .pillar {
-      transform: scale3d(1, 1, 1);
-
       &:nth-child(1) {
         transition: 0.25s transform 0.6s;
+        transform: rotateZ(-5deg) scale3d(1, 1, 1);
       }
 
       &:nth-child(2) {
         transition: 0.25s transform 0.75s;
+        transform: rotateZ(5deg) scale3d(1, 1, 1);
       }
     }
 
