Copy change for matrix article

--- a/src/components/matrix/index.ejs
+++ b/src/components/matrix/index.ejs
@@ -28,8 +28,8 @@ Lots of people already attempted to reproduce the Matrix Digital Rain in code, b
 Looking at the video clip above, here are some of my observations on what's going on:
 
 - The code is katakana, numbers and some symbols inverted on the Y axis.
-- The code doesn't actually move but continuously appended at the bottom.
-- At the end of the trail, the code fades out.
+- The code doesn't actually move but is continuously appended at the bottom.
+- At the top of the trail, the code fades out.
 - There seem to be some sort of motion blur on the code fading out.
 - There can be more than 1 stream of code per column.
 - Each frame, some of the characters change but most remain the same.
@@ -40,6 +40,8 @@ Looking at the video clip above, here are some of my observations on what's goin
 ## Conclusion
 
 Looking at my list of observations, it's no wonder that making a convincing replica in code is difficult.
+
+I think the difficult path is perfecting the glow. It needs to move smoothly down the characters like someone shining a light across the code. It's brightness also needs to be very intense.
 
 After spending a lazy weekend fiddling around, I would say for most practical purposes, it is better to just take the idea of the digital rain and make it beautiful rather than try to mimic it faithfully.
 
