--- a/src/components/mainmenu/keyframes.scss
+++ b/src/components/mainmenu/keyframes.scss
@@ -30,37 +30,37 @@
 
 @keyframes expand {
   0% {
-    transform: scale(0);
+    transform: scale3d(0, 0, 1);
   }
   100% {
-    transform: scale(1);
+    transform: none;
   }
 }
 
 @keyframes expand-x {
   0% {
-    transform: scaleX(0);
+    transform: scale3d(0, 1, 1);
   }
   100% {
-    transform: scaleX(1);
+    transform: none;
   }
 }
 
 @keyframes shrink-x {
   0% {
-    transform: scaleX(1);
+    transform: none;
   }
   100% {
-    transform: scaleX(0);
+    transform: scale3d(0, 1, 1);
   }
 }
 
 @keyframes shrink-y {
   0% {
-    transform: scaleY(1);
+    transform: none;
   }
   100% {
-    transform: scaleY(0);
+    transform: scale3d(1, 0, 1);
   }
 }
 
