--- a/src/components/transition/about.scss
+++ b/src/components/transition/about.scss
@@ -78,30 +78,30 @@
 #about:target {
   ~ .about-filter {
     transition: 0.3s transform 0.1s;
-    transform: scale3d(1, 1, 1);
+    transform: none;
   }
 
   ~ .about-decorations {
     .pillar {
       &:nth-child(1) {
         transition: 0.25s transform 0.6s;
-        transform: rotateZ(-5deg) scale3d(1, 1, 1);
+        transform: rotateZ(-5deg);
       }
 
       &:nth-child(2) {
         transition: 0.25s transform 0.75s;
-        transform: rotateZ(5deg) scale3d(1, 1, 1);
+        transform: rotateZ(5deg);
       }
     }
 
     .flower-1 {
       transition: 0.25s transform 0.3s;
-      transform: rotateZ(24deg) scale3d(1, 1, 1);
+      transform: rotateZ(24deg);
     }
 
     .flower-2 {
       transition: 0.25s transform 0.45s;
-      transform: rotateZ(-90deg) scale3d(1, 1, 1);
+      transform: rotateZ(-90deg);
     }
   }
 }
