--- a/src/components/about/index.ejs
+++ b/src/components/about/index.ejs
@@ -40,12 +40,9 @@ But I don't think that's what's important.
 Algorithms & Frameworks are easily learned.
 Attitude & Mindset, not so much.
 
-Want someone who can hit the ground running?
-It's a marathon, not a sprint.
+**Instead of reading, let's talk.**
 
-**Let's talk.**
-
-The combined power of the 2 of us may surprise even the world.
+[hojialiang@yahoo.com](mailto:hojialiang@yahoo.com "My Email")
     `) %>
   </div>
 </section>
