--- a/src/components/matrix/index.ejs
+++ b/src/components/matrix/index.ejs
@@ -25,25 +25,27 @@ Lots of people already attempted to reproduce the Matrix Digital Rain in code, b
 
 ## Observations
 
-Looking at the video clip above, here are some of my observations on what's going on:
+Looking at the video clip above, here are some of my observations:
 
 - The code is katakana, numbers and some symbols inverted on the Y axis.
-- The code doesn't actually move but is continuously appended at the bottom.
+- The code doesn't actually move but is continuously appended at the bottom.<br /><br />
 - At the top of the trail, the code fades out.
-- There seem to be some sort of motion blur on the code fading out.
+- There seem to be some sort of motion blur on the code fading out.<br /><br />
+- The glow is not constant but pulsates.
+- The glow is independent of the characters. It travels smoothly down as new characters appear.
+- The light of the glow bleeds into nearby code.<br /><br />
 - There can be more than 1 stream of code per column.
 - Each frame, some of the characters change but most remain the same.
-- The glow is not constant but pulsates.
-- The glow is independent of the characters.
-- The light of the glow bleeds into nearby code.
 
 ## Conclusion
 
-Looking at my list of observations, it's no wonder that making a convincing replica in code is difficult.
+After spending a lazy weekend fiddling around, I made some mistakes in my approach that makes creating a convincing replica impossible. So I had to improvise to at least make it look nice.
 
-I think the difficult path is perfecting the glow. It needs to move smoothly down the characters like someone shining a light across the code. It's brightness also needs to be very intense.
+I think the difficult part is perfecting the glow. It needs to move smoothly down the characters like someone shining a light across the code. I would think something like this setup would be needed:
 
-After spending a lazy weekend fiddling around, I would say for most practical purposes, it is better to just take the idea of the digital rain and make it beautiful rather than try to mimic it faithfully.
+3 layers: 1 layer of text as the base, 1 layer as the lightsource and 1 layer as the mask to make the lightsource conforms to the shape of the text. I think something like this approach involving mix-blend-mode would work: [https://codepen.io/giana/pen/qmKNeE](https://codepen.io/giana/pen/qmKNeE).
+
+Anyway, I'm thinking of giving this another go in the future.
 
 ---
 
