Tweak CSS to improve performance 2

--- a/src/components/mainmenu/index.ejs
+++ b/src/components/mainmenu/index.ejs
@@ -14,16 +14,11 @@
     <div class="leaf"></div>
     <div class="leaf"></div>
     <div class="leaf"></div>
-    <div class="leaf"></div>
-    <div class="leaf"></div>
-    <div class="leaf"></div>
-    <div class="leaf"></div>
-    <div class="leaf"></div>
   </div>
   <div class="dust" role="presentation"></div>
   <nav class="nav">
-    <a class="button" href="#about" title="Go to About section">ABOUT</a>
-    <a class="button" href="#work" title="Go to Work section">WORK</a>
+    <a class="button" href="#about" title="Go to About section">ABOUT</a
+    ><a class="button" href="#work" title="Go to Work section">WORK</a>
     <br />
     <a class="thanks" href="#thanks" title="Go to Thanks & Attribution section"
       >Thanks & Attribution</a
