--- a/src/components/website/index.ejs
+++ b/src/components/website/index.ejs
@@ -30,17 +30,17 @@ JavaScript libraries powered by [NodeJS](https://nodejs.org/en/) are used to com
 
 ## Performance
 
-The entire website inclusive of all resources for my 1080p screen has a transfer size of only 209kB, of which:
+The entire website inclusive of all resources for my 1080p screen has a transfer size of only 221kB, of which:
 
 Type   | Approx. Size
 :---   | ---:
-WEBP   | 70kB (33%)
-SVG    | 84kB (40%)
+WEBP   | 70kB (32%)
+SVG    | 83kB (38%)
+PNG    | 34kB (15%)
 WOFF2  | 19kB (9%)
-PNG    | 22kB (10%)
 CSS    | 8kB (4%)
 HTML   | 7kB (3%)
-JS     | 200 Bytes
+JS     | Less than 1kB
 
 For comparison, the [Google homepage](https://jialiang.github.io/images/google-speed.jpg) trasfers a total of 458kB on the same device.
 
@@ -61,7 +61,7 @@ This website is compatible with:
 - Internet Explorer 11
 
 It also functions fine with JavaScript disabled.
-The only line of JavaScript used is just to make sure the opening animation doesn't play if the page loads with a valid hash fragment.
+The only line of JavaScript used is just to make the intro animation more efficient.
 
 This website supports screens of:
 
