--- a/src/components/mainmenu/keyframes.scss
+++ b/src/components/mainmenu/keyframes.scss
@@ -3,7 +3,7 @@
     opacity: 1;
   }
   50% {
-    opacity: 0.8;
+    opacity: 0.9;
   }
   100% {
     opacity: 1;
@@ -33,7 +33,7 @@
     transform: scale3d(0, 0, 1);
   }
   100% {
-    transform: none;
+    transform: scale3d(1, 1, 1);
   }
 }
 
@@ -42,13 +42,13 @@
     transform: scale3d(0, 1, 1);
   }
   100% {
-    transform: none;
+    transform: scale3d(1, 1, 1);
   }
 }
 
 @keyframes shrink-x {
   0% {
-    transform: none;
+    transform: scale3d(1, 1, 1);
   }
   100% {
     transform: scale3d(0, 1, 1);
@@ -57,7 +57,7 @@
 
 @keyframes shrink-y {
   0% {
-    transform: none;
+    transform: scale3d(1, 1, 1);
   }
   100% {
     transform: scale3d(1, 0, 1);
@@ -72,10 +72,11 @@
 
 @keyframes leaf-fall-1 {
   0% {
-    transform: rotateZ(72.51deg) scale(0.95);
+    transform: rotate3d(0, 0, 1, 72.51deg) scale(0.95);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(414.22deg) scale(0.95);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 414.22deg)
+      scale(0.95);
   }
 }
 
@@ -87,10 +88,11 @@
 
 @keyframes leaf-fall-2 {
   0% {
-    transform: rotateZ(183deg) scale(2.03);
+    transform: rotate3d(0, 0, 1, 183deg) scale(2.03);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(677.68deg) scale(2.03);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 677.68deg)
+      scale(2.03);
   }
 }
 
@@ -102,10 +104,11 @@
 
 @keyframes leaf-fall-3 {
   0% {
-    transform: rotateZ(202.96deg) scale(1.29);
+    transform: rotate3d(0, 0, 1, 202.96deg) scale(1.29);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(396.53deg) scale(1.29);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 396.53deg)
+      scale(1.29);
   }
 }
 
@@ -117,10 +120,11 @@
 
 @keyframes leaf-fall-4 {
   0% {
-    transform: rotateZ(351.86deg) scale(1.66);
+    transform: rotate3d(0, 0, 1, 351.86deg) scale(1.66);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(725.5deg) scale(1.66);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 725.5deg)
+      scale(1.66);
   }
 }
 
@@ -132,10 +136,11 @@
 
 @keyframes leaf-fall-5 {
   0% {
-    transform: rotateZ(257.35deg) scale(2.22);
+    transform: rotate3d(0, 0, 1, 257.35deg) scale(2.22);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(724.77deg) scale(2.22);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 724.77deg)
+      scale(2.22);
   }
 }
 
@@ -147,10 +152,11 @@
 
 @keyframes leaf-fall-6 {
   0% {
-    transform: rotateZ(20.91deg) scale(2.23);
+    transform: rotate3d(0, 0, 1, 20.91deg) scale(2.23);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(383.43deg) scale(2.23);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 383.43deg)
+      scale(2.23);
   }
 }
 
@@ -162,10 +168,11 @@
 
 @keyframes leaf-fall-7 {
   0% {
-    transform: rotateZ(281.88deg) scale(1.51);
+    transform: rotate3d(0, 0, 1, 281.88deg) scale(1.51);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(630.82deg) scale(1.51);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 630.82deg)
+      scale(1.51);
   }
 }
 
@@ -177,10 +184,11 @@
 
 @keyframes leaf-fall-8 {
   0% {
-    transform: rotateZ(142.04deg) scale(1.45);
+    transform: rotate3d(0, 0, 1, 142.04deg) scale(1.45);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(556.37deg) scale(1.45);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 556.37deg)
+      scale(1.45);
   }
 }
 
@@ -192,10 +200,11 @@
 
 @keyframes leaf-fall-9 {
   0% {
-    transform: rotateZ(32.31deg) scale(1.58);
+    transform: rotate3d(0, 0, 1, 32.31deg) scale(1.58);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(332.82deg) scale(1.58);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 332.82deg)
+      scale(1.58);
   }
 }
 
@@ -207,10 +216,11 @@
 
 @keyframes leaf-fall-10 {
   0% {
-    transform: rotateZ(350.17deg) scale(2.14);
+    transform: rotate3d(0, 0, 1, 350.17deg) scale(2.14);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(860.12deg) scale(2.14);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 860.12deg)
+      scale(2.14);
   }
 }
 
@@ -222,10 +232,11 @@
 
 @keyframes leaf-fall-11 {
   0% {
-    transform: rotateZ(293.81deg) scale(1.36);
+    transform: rotate3d(0, 0, 1, 293.81deg) scale(1.36);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(589.77deg) scale(1.36);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 589.77deg)
+      scale(1.36);
   }
 }
 .leaf:nth-child(12) {
@@ -236,10 +247,11 @@
 
 @keyframes leaf-fall-12 {
   0% {
-    transform: rotateZ(163.01deg) scale(2.08);
+    transform: rotate3d(0, 0, 1, 163.01deg) scale(2.08);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(628.63deg) scale(2.08);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 628.63deg)
+      scale(2.08);
   }
 }
 .leaf:nth-child(13) {
@@ -250,10 +262,11 @@
 
 @keyframes leaf-fall-13 {
   0% {
-    transform: rotateZ(126.22deg) scale(1.43);
+    transform: rotate3d(0, 0, 1, 126.22deg) scale(1.43);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(531.84deg) scale(1.43);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 531.84deg)
+      scale(1.43);
   }
 }
 .leaf:nth-child(14) {
@@ -264,10 +277,11 @@
 
 @keyframes leaf-fall-14 {
   0% {
-    transform: rotateZ(292.16deg) scale(0.93);
+    transform: rotate3d(0, 0, 1, 292.16deg) scale(0.93);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(680.86deg) scale(0.93);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 680.86deg)
+      scale(0.93);
   }
 }
 
@@ -279,10 +293,11 @@
 
 @keyframes leaf-fall-15 {
   0% {
-    transform: rotateZ(328.66deg) scale(0.88);
+    transform: rotate3d(0, 0, 1, 328.66deg) scale(0.88);
   }
   100% {
-    transform: translate3d(100vh, 100vh, 0) rotateZ(760.29deg) scale(0.88);
+    transform: translate3d(100vh, 100vh, 0) rotate3d(0, 0, 1, 760.29deg)
+      scale(0.88);
   }
 }
 
@@ -350,134 +365,149 @@
 
 @keyframes mobile-leaf-fall-1 {
   0% {
-    transform: rotateZ(72.51deg) scale(0.95);
+    transform: rotate3d(0, 0, 1, 72.51deg) scale(0.95);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(414.22deg) scale(0.95);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 414.22deg)
+      scale(0.95);
   }
 }
 
 @keyframes mobile-leaf-fall-2 {
   0% {
-    transform: rotateZ(183deg) scale(2.03);
+    transform: rotate3d(0, 0, 1, 183deg) scale(2.03);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(677.68deg) scale(2.03);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 677.68deg)
+      scale(2.03);
   }
 }
 
 @keyframes mobile-leaf-fall-3 {
   0% {
-    transform: rotateZ(202.96deg) scale(1.29);
+    transform: rotate3d(0, 0, 1, 202.96deg) scale(1.29);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(396.53deg) scale(1.29);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 396.53deg)
+      scale(1.29);
   }
 }
 
 @keyframes mobile-leaf-fall-4 {
   0% {
-    transform: rotateZ(351.86deg) scale(1.66);
+    transform: rotate3d(0, 0, 1, 351.86deg) scale(1.66);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(725.5deg) scale(1.66);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 725.5deg)
+      scale(1.66);
   }
 }
 
 @keyframes mobile-leaf-fall-5 {
   0% {
-    transform: rotateZ(257.35deg) scale(2.22);
+    transform: rotate3d(0, 0, 1, 257.35deg) scale(2.22);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(724.77deg) scale(2.22);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 724.77deg)
+      scale(2.22);
   }
 }
 
 @keyframes mobile-leaf-fall-6 {
   0% {
-    transform: rotateZ(20.91deg) scale(2.23);
+    transform: rotate3d(0, 0, 1, 20.91deg) scale(2.23);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(383.43deg) scale(2.23);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 383.43deg)
+      scale(2.23);
   }
 }
 
 @keyframes mobile-leaf-fall-7 {
   0% {
-    transform: rotateZ(281.88deg) scale(1.51);
+    transform: rotate3d(0, 0, 1, 281.88deg) scale(1.51);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(630.82deg) scale(1.51);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 630.82deg)
+      scale(1.51);
   }
 }
 
 @keyframes mobile-leaf-fall-8 {
   0% {
-    transform: rotateZ(142.04deg) scale(1.45);
+    transform: rotate3d(0, 0, 1, 142.04deg) scale(1.45);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(556.37deg) scale(1.45);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 556.37deg)
+      scale(1.45);
   }
 }
 
 @keyframes mobile-leaf-fall-9 {
   0% {
-    transform: rotateZ(32.31deg) scale(1.58);
+    transform: rotate3d(0, 0, 1, 32.31deg) scale(1.58);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(332.82deg) scale(1.58);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 332.82deg)
+      scale(1.58);
   }
 }
 
 @keyframes mobile-leaf-fall-10 {
   0% {
-    transform: rotateZ(350.17deg) scale(2.14);
+    transform: rotate3d(0, 0, 1, 350.17deg) scale(2.14);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(860.12deg) scale(2.14);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 860.12deg)
+      scale(2.14);
   }
 }
 
 @keyframes mobile-leaf-fall-11 {
   0% {
-    transform: rotateZ(293.81deg) scale(1.36);
+    transform: rotate3d(0, 0, 1, 293.81deg) scale(1.36);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(589.77deg) scale(1.36);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 589.77deg)
+      scale(1.36);
   }
 }
 @keyframes mobile-leaf-fall-12 {
   0% {
-    transform: rotateZ(163.01deg) scale(2.08);
+    transform: rotate3d(0, 0, 1, 163.01deg) scale(2.08);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(628.63deg) scale(2.08);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 628.63deg)
+      scale(2.08);
   }
 }
 
 @keyframes mobile-leaf-fall-13 {
   0% {
-    transform: rotateZ(126.22deg) scale(1.43);
+    transform: rotate3d(0, 0, 1, 126.22deg) scale(1.43);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(531.84deg) scale(1.43);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 531.84deg)
+      scale(1.43);
   }
 }
 
 @keyframes mobile-leaf-fall-14 {
   0% {
-    transform: rotateZ(292.16deg) scale(0.93);
+    transform: rotate3d(0, 0, 1, 292.16deg) scale(0.93);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(680.86deg) scale(0.93);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 680.86deg)
+      scale(0.93);
   }
 }
 
 @keyframes mobile-leaf-fall-15 {
   0% {
-    transform: rotateZ(328.66deg) scale(0.88);
+    transform: rotate3d(0, 0, 1, 328.66deg) scale(0.88);
   }
   100% {
-    transform: translate3d(100vw, 100vh, 0) rotateZ(760.29deg) scale(0.88);
+    transform: translate3d(100vw, 100vh, 0) rotate3d(0, 0, 1, 760.29deg)
+      scale(0.88);
   }
 }
