--- a/src/components/transition/about.scss
+++ b/src/components/transition/about.scss
@@ -7,7 +7,9 @@
 
   mix-blend-mode: hard-light;
 
-  @media (max-width: 25.5em) {
+  @media (-ms-high-contrast: none),
+    (-ms-high-contrast: active),
+    (max-width: 25.5em) {
     background: radial-gradient(white 5%, rgba(255, 106, 0, 0.5) 67%);
 
     mix-blend-mode: normal;
@@ -23,29 +25,27 @@
     position: absolute;
     top: 0;
     height: 100%;
-    border-right: 2px solid maroon;
-    border-left: 2px solid #333;
     background: linear-gradient(
-    to right,
-    rgba(0, 0, 0, 0) 25%,
-    rgba(0, 0, 0, 0.5) 30%,
-    rgba(0, 0, 0, 0.5) 70%,
-    rgba(0, 0, 0, 0) 75%
-    )
-    0 33%/25px 25vh repeat-x,
-    linear-gradient(to right, maroon, rgba(194, 0, 0, 0.6), red);
+          to right,
+          rgba(0, 0, 0, 0) 25%,
+          rgba(0, 0, 0, 0.5) 30%,
+          rgba(0, 0, 0, 0.5) 70%,
+          rgba(0, 0, 0, 0) 75%
+        )
+        0 33%/25px 25vh repeat-x,
+      linear-gradient(to right, maroon, rgba(194, 0, 0, 0.6), red);
 
     &:nth-child(1) {
       left: 0;
       width: 25%;
-      transform: rotateZ(-5deg) scale3d(0, 1, 1);
+      transform: rotate3d(0, 0, 1, -5deg) scale3d(0, 1, 1);
       transform-origin: left;
     }
 
     &:nth-child(2) {
       left: 75%;
       width: 12.5%;
-      transform: rotateZ(5deg) scale3d(0, 1, 1);
+      transform: rotate3d(0, 0, 1, 5deg) scale3d(0, 1, 1);
       transform-origin: right;
     }
   }
@@ -57,7 +57,7 @@
     left: 0;
     width: 350px;
     height: 350px;
-    transform: rotateZ(24deg) scale3d(0, 0, 1);
+    transform: rotate3d(0, 0, 1, 24deg) scale3d(0, 0, 1);
     background: inline-svg("floral", black, black) 0 100%/350px auto no-repeat;
   }
 
@@ -67,9 +67,9 @@
     bottom: auto;
     left: auto;
     transition: none;
-    transform: rotateZ(-90deg) scale3d(0, 0, 1);
+    transform: rotate3d(0, 0, 1, -90deg) scale3d(0, 0, 1);
 
-    @media (max-height: 600px) {
+    @media (max-height: 600px) and (max-width: 700px) {
       display: none;
     }
   }
@@ -77,31 +77,31 @@
 
 #about:target {
   ~ .about-filter {
-    transition: 0.3s transform 0.1s;
-    transform: none;
+    transition: 0.29s transform 0.1s;
+    transform: scale3d(1, 1, 1);
   }
 
   ~ .about-decorations {
     .pillar {
       &:nth-child(1) {
-        transition: 0.25s transform 0.6s;
-        transform: rotateZ(-5deg);
+        transition: 0.24s transform 0.6s;
+        transform: rotate3d(0, 0, 1, -5deg) scale3d(1, 1, 1);
       }
 
       &:nth-child(2) {
-        transition: 0.25s transform 0.75s;
-        transform: rotateZ(5deg);
+        transition: 0.24s transform 0.85s;
+        transform: rotate3d(0, 0, 1, 5deg) scale3d(1, 1, 1);
       }
     }
 
     .flower-1 {
-      transition: 0.25s transform 0.3s;
-      transform: rotateZ(24deg);
+      transition: 0.24s transform 0.4s;
+      transform: rotate3d(0, 0, 1, 24deg) scale3d(1, 1, 1);
     }
 
     .flower-2 {
-      transition: 0.25s transform 0.45s;
-      transform: rotateZ(-90deg);
+      transition: 0.24s transform 1.15s;
+      transform: rotate3d(0, 0, 1, -90deg) scale3d(1, 1, 1);
     }
   }
 }
