--- a/src/components/transition/work.scss
+++ b/src/components/transition/work.scss
@@ -7,11 +7,13 @@
 
   mix-blend-mode: hard-light;
 
-  @media (max-width: 25.5em) {
+  @media (-ms-high-contrast: none),
+    (-ms-high-contrast: active),
+    (max-width: 25.5em) {
     background: radial-gradient(
-    rgba(9, 128, 255, 0.5),
-    #00ffcf,
-    rgba(97, 97, 181, 0.5)
+      rgba(9, 128, 255, 0.5),
+      #00ffcf,
+      rgba(97, 97, 181, 0.5)
     );
 
     mix-blend-mode: normal;
@@ -26,8 +28,6 @@
   .fish-1,
   .fish-2 {
     position: absolute;
-    bottom: 0;
-    left: 0;
     width: 350px;
     height: 350px;
     transform: scale3d(0, 0, 1);
@@ -35,11 +35,15 @@
     background: inline-svg("fish") 0 0 / auto 100% no-repeat;
   }
 
+  .fish-1 {
+    left: 0;
+    bottom: 0;
+  }
+
   .fish-2 {
     right: 0;
     bottom: 350px;
-    left: auto;
-    transform: rotateZ(90deg) scale3d(0, 0, 1);
+    transform: rotate3d(0, 0, 1, 90deg) scale3d(0, 0, 1);
 
     @media (max-width: 750px) {
       display: none;
@@ -50,18 +54,18 @@
 #work:target {
   ~ .work-filter {
     transition: 0.29s transform 0.1s;
-    transform: none;
+    transform: scale3d(1, 1, 1);
   }
 
   ~ .work-decorations {
     .fish-1 {
       transition: 0.24s transform 0.4s;
-      transform: none;
+      transform: scale3d(1, 1, 1);
     }
 
     .fish-2 {
       transition: 0.24s transform 0.65s;
-      transform: rotateZ(90deg);
+      transform: rotate3d(0, 0, 1, 90deg) scale3d(1, 1, 1);
     }
   }
 }
