--- a/src/components/mainmenu/index.ejs
+++ b/src/components/mainmenu/index.ejs
@@ -24,17 +24,12 @@
       >Thanks & Attribution</a
     >
   </nav>
-  <div class="intro-2" role="presentation">
-    <div class="reveal"></div>
-    <div class="reveal"></div>
-    <div class="reveal"></div>
-    <div class="reveal"></div>
-  </div>
   <div class="intro-1" role="presentation">
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
-    <div class="circle"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="background"></div>
   </div>
   <div class="intro-0" role="presentation">
     <span aria-hidden="true">LOADING...</span>
