--- a/src/components/mainmenu/keyframes.scss
+++ b/src/components/mainmenu/keyframes.scss
@@ -28,39 +28,42 @@
   }
 }
 
-@keyframes expand {
+@keyframes intro-0-inner-expand-x {
+  0% {
+    transform: scale3d(0, 1, 1);
+  }
+  100% {
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+@keyframes intro-0-shrink-x {
+  0% {
+    transform: scale3d(1, 1, 1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale3d(0, 1, 1);
+    opacity: 0.5;
+  }
+}
+
+@keyframes square-shrink {
   0% {
     transform: scale3d(0, 0, 1);
+    opacity: 0;
   }
-  100% {
+  30% {
     transform: scale3d(1, 1, 1);
   }
-}
-
-@keyframes expand-x {
-  0% {
-    transform: scale3d(0, 1, 1);
+  50% {
+    opacity: 1;
   }
-  100% {
-    transform: scale3d(1, 1, 1);
-  }
-}
-
-@keyframes shrink-x {
-  0% {
+  60% {
     transform: scale3d(1, 1, 1);
   }
   100% {
-    transform: scale3d(0, 1, 1);
-  }
-}
-
-@keyframes shrink-y {
-  0% {
-    transform: scale3d(1, 1, 1);
-  }
-  100% {
-    transform: scale3d(1, 0, 1);
+    transform: scale3d(0, 0, 1);
   }
 }
 
