--- a/src/components/about/index.ejs
+++ b/src/components/about/index.ejs
@@ -5,14 +5,14 @@
 # <span>About Me</span>
 
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 381.3 381.3" class="avatar">
-  <path class="st1" id="polygon6" transform="translate(0 44.5)" fill="#6c6c6c" d="M124 229l-22 8.3v99.5h177.3v-99.5l-22.1-7-5.6-19.1-58.4 58.9-64-58.9z"/>
-  <ellipse class="st1" cx="190" cy="174.5" rx="80.2" ry="97.2" id="ellipse8" fill="#6c6c6c"/>
-  <path class="st2" d="M143 163.9h31.6c4.1 0 7.5 3.4 7.5 7.5v12.5c0 4.1-3.4 7.5-7.5 7.5H143c-4.1 0-7.5-3.4-7.5-7.5v-12.5c0-4.2 3.3-7.5 7.5-7.5z" id="path10" fill="none" stroke="#fff" stroke-width="4" stroke-miterlimit="10"/>
-  <path class="st2" d="M206.5 163.9H238c4.1 0 7.5 3.4 7.5 7.5v12.5c0 4.1-3.4 7.5-7.5 7.5h-31.6c-4.1 0-7.5-3.4-7.5-7.5v-12.5c.1-4.2 3.4-7.5 7.6-7.5z" id="path12" fill="none" stroke="#fff" stroke-width="4" stroke-miterlimit="10"/>
-  <path class="st3" d="M182 180.1s8.5-11.7 16.9 0" id="path14" fill="none" stroke="#fff" stroke-width="3" stroke-miterlimit="10"/>
-  <path class="st3" id="line20" fill="none" stroke="#fff" stroke-width="3" stroke-miterlimit="10" d="M245.5 177.6l22.2-7.9"/>
-  <path class="st3" id="line22" fill="none" stroke="#fff" stroke-width="3" stroke-miterlimit="10" d="M135.5 177.6l-22.3-7.9"/>
-  <path d="M267.5 74.6c-8.3 7-6.2 11.8-.1 16.6 20.8 16.3 22.9 37.4 16.1 61.3-5.2 18.2-9.3 36.7-14.4 57.3L252 140.4c-41.2 13.2-83.9 8.6-127.6 1.8-2.8 22.5 0 45.1-10.1 65.9-2.1-11.6-3.8-22.7-6.4-33.6-1.3-5.4-4.5-10.3-6.4-15.6-4.1-11.3-3.4-21.8 6.4-31.2l-12.8 4.1-1.6-1.4 28.2-33.6-12.8-9.3 29.2-3.8-18.2-14.2c24.9-3.3 49-7.2 73.3-9.5 17.5-1.8 35 3.2 48.8 14 6.5 5 11.8 8.4 18.9 1.7 1-.8 3-.5 6.6-1.1z" id="path24" fill="#6c6c6c" stroke="#fff" stroke-miterlimit="10" stroke-width="3" stroke-dasharray="none"/>
+  <path class="st1" id="polygon6" transform="translate(0 44.5)" fill="#6c6c6c" d="M124 229l-22 8.3v99.5h177.3v-99.5l-22.1-7-5.6-19.1-58.4 58.9-64-58.9z"></path>
+  <ellipse class="st1" cx="190" cy="174.5" rx="80.2" ry="97.2" id="ellipse8" fill="#6c6c6c"></ellipse>
+  <path class="st2" d="M143 163.9h31.6c4.1 0 7.5 3.4 7.5 7.5v12.5c0 4.1-3.4 7.5-7.5 7.5H143c-4.1 0-7.5-3.4-7.5-7.5v-12.5c0-4.2 3.3-7.5 7.5-7.5z" id="path10" fill="none" stroke="#fff" stroke-width="4" stroke-miterlimit="10"></path>
+  <path class="st2" d="M206.5 163.9H238c4.1 0 7.5 3.4 7.5 7.5v12.5c0 4.1-3.4 7.5-7.5 7.5h-31.6c-4.1 0-7.5-3.4-7.5-7.5v-12.5c.1-4.2 3.4-7.5 7.6-7.5z" id="path12" fill="none" stroke="#fff" stroke-width="4" stroke-miterlimit="10"></path>
+  <path class="st3" d="M182 180.1s8.5-11.7 16.9 0" id="path14" fill="none" stroke="#fff" stroke-width="3" stroke-miterlimit="10"></path>
+  <path class="st3" id="line20" fill="none" stroke="#fff" stroke-width="3" stroke-miterlimit="10" d="M245.5 177.6l22.2-7.9"></path>
+  <path class="st3" id="line22" fill="none" stroke="#fff" stroke-width="3" stroke-miterlimit="10" d="M135.5 177.6l-22.3-7.9"></path>
+  <path d="M267.5 74.6c-8.3 7-6.2 11.8-.1 16.6 20.8 16.3 22.9 37.4 16.1 61.3-5.2 18.2-9.3 36.7-14.4 57.3L252 140.4c-41.2 13.2-83.9 8.6-127.6 1.8-2.8 22.5 0 45.1-10.1 65.9-2.1-11.6-3.8-22.7-6.4-33.6-1.3-5.4-4.5-10.3-6.4-15.6-4.1-11.3-3.4-21.8 6.4-31.2l-12.8 4.1-1.6-1.4 28.2-33.6-12.8-9.3 29.2-3.8-18.2-14.2c24.9-3.3 49-7.2 73.3-9.5 17.5-1.8 35 3.2 48.8 14 6.5 5 11.8 8.4 18.9 1.7 1-.8 3-.5 6.6-1.1z" id="path24" fill="#6c6c6c" stroke="#fff" stroke-miterlimit="10" stroke-width="3" stroke-dasharray="none"></path>
 </svg>
 
 Jia Liang
